--- a/scrumapp-jsf/src/main/webapp/views/hola.xhtml
+++ b/scrumapp-jsf/src/main/webapp/views/hola.xhtml
@@ -4,13 +4,14 @@
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 xmlns:p="http://primefaces.org/ui">
-    <ui:define name="content">
+
+    <ui:define name="body">
         <h:form id="form">
             <p:growl id="msgs" showDetail="true" skipDetailIfEqualsSummary="true"/>
 
-            <div class="card">
+
                 <h5>Equipos</h5>
-                <p:commandButton type="button" value="Actualizar" action="#{equipoController.refresh}" update="@form"/>
+                <p:commandButton type="button" value="Actualizar" actionListener="#{equipoController.refresh}" update="@form"/>
                 <p:dataTable var="equipo" value="#{equipoController.equipos}" draggableRows="true">
                     <p:ajax event="rowReorder" listener="#{equipoController.onRowReorder}" update=":form:msgs"/>
 
@@ -30,7 +31,7 @@
                         <h:outputText value="#{equipo.observaciones}" />
                     </p:column>
                 </p:dataTable>
-            </div>
+
         </h:form>
     </ui:define>
 </ui:composition>
