--- a/scrumapp-jsf/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/scrumapp-jsf/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -6,18 +6,13 @@
       xmlns:p="http://primefaces.org/ui">
 
     <h:head>
-
+		<link rel="stylesheet" type="text/css" href="/WEB-INF/css/style.css"/>
         <title>ScrumApp</title>
     </h:head>
     <h:body>
-        <div class="jumbotron jumbotron-fluid">
-            <div class="container">
-                <h1 class="display-4">I'm a Header template</h1>
-            </div>
-        </div>
         <div class="row">
             <div class="col-md-12">
-                <h:form id="FormMenu">
+                <h:form id="FormMenu" style="margin-bottom: 30px">
                     <p:menubar>
                         <p:submenu label="Item1" icon="fa fa-road">
                             <p:submenu label="Subitem1">
@@ -47,6 +42,12 @@
                                 </p:submenu>
                             </p:submenu>
                         </p:submenu>
+                        <p:submenu label="#{equipoController.miembroAuth.nombre}" style="float: right;" icon="fa fa-fw fa-user">
+                       	 		<p:menuitem action="#{loginController.logout}" value="Profile" immediate="true" icon="fa fa-fw fa-edit" ajax="false"/>
+                       	 		<p:menuitem action="#{loginController.logout}" value="Settings" immediate="true" icon="fa fa-fw fa-cog" ajax="false"/>
+                       	 		<p:separator/>
+				                <p:menuitem action="#{loginController.logout}" value="Logout" immediate="true" icon="fa fa-fw fa-sign-out" ajax="false"/>
+				            </p:submenu>
                     </p:menubar>
                 </h:form>
             </div>
