--- a/scrumapp-jsf/src/main/webapp/WEB-INF/templates/template.xhtml
+++ b/scrumapp-jsf/src/main/webapp/WEB-INF/templates/template.xhtml
@@ -24,7 +24,7 @@
 				    <p:panelGrid/>
 				</p:panelGrid>    
                     <p:menubar style="background: #b8d8f5; padding-left: 50px; padding-right: 20px;">
-                        <p:menuitem value="Mis Proyectos" 
+                        <p:menuitem value="Mis Proyectos"  action="gotoprojects"
                                             title="Mis Proyectos" style="margin-right:15px;" />
                         <p:menuitem value="Mis Equipos" 
                                             title="Mis Equipos" style="margin-right:15px;" />
